# Deep-Learning-for-the-Examination-of-Voice-Disorders-in-the-Identification-of-Parkinson-s-Disease

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CODEOWNERS  LICENSE  Makefile  README.md  docker-compose.yml  implementation_plan.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  alembic.ini  prestart.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260501_0001_initial.py  20260518_0010_add_narrative.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  deps.py  errors.py  logging.py  observability.py  rate_limit.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  audit_log.py  batch_job.py  feedback.py  prediction.py
backend/app/llm/: __init__.py  budget.py  cache.py  factory.py  glossary.json  help_corpus.md  orchestrator.py  router.py  session.py  validator.py
backend/app/llm/prompts/: explainer_system.md  help_system.md  narrator_system.md  refusal_template.md
backend/app/llm/providers/: __init__.py  _openai_compat.py  base.py  gemini.py  groq.py  openrouter.py
backend/app/llm/tools/: __init__.py  dataset.py  feature.py  model.py  shap.py  what_if.py
backend/app/ml/: ensemble.py  manager.py  registry.py
backend/app/repositories/: batch_job.py  feedback.py  model_metadata.py  prediction.py
backend/app/routers/: admin.py  analytics.py  audio.py  auth.py  batch.py  chat.py  explain.py  feedback.py  health.py  help.py  models.py  predict.py  predictions.py
backend/app/schemas/: analytics.py  auth.py  batch.py  chat.py  explain.py  feature.py  feedback.py  help.py  model.py  narrate.py  prediction.py
backend/app/services/: analytics.py  batch.py  evaluation.py  explain.py  explainability.py  feature_extraction.py  model_eval.py  narrator.py  nonlinear.py  prediction_service.py  preprocessing.py  training.py
backend/models/: adaboost.joblib  bagging.joblib  decision_tree.joblib  decision_tree_calibrator.joblib  knn.joblib  knn_calibrator.joblib  lightgbm.joblib  manifest.json  pca.joblib  pca_rf.joblib  random_forest.joblib  scaler.joblib  svm.joblib  svm_calibrator.joblib  xgboost.joblib
backend/scripts/: dump_openapi.py  seed_dataset.py  train.py
backend/tests/: conftest.py  test_smoke.py
backend/tests/integration/: test_analytics_endpoint.py  test_auth_endpoint.py  test_batch_endpoint.py  test_feedback_endpoint.py  test_models_endpoint.py  test_predict_endpoint.py  test_prediction_persistence.py  test_shap.py
deploy/: deploy.sh  setup.sh
docs/: 00_MASTER_PLAN.md  01_HLD.md  02_BACKEND_LLD.md  03_FRONTEND_LLD.md  04_DEVOPS_LLD.md  05_EXECUTION_ROADMAP.md  06_LLM_INTEGRATION_LLD.md
docs/adr/: ADR-0001-monorepo.md  ADR-0002-fastapi-pydantic-v2.md  ADR-0003-typescript-strict.md  ADR-0004-shadcn-tailwind.md  ADR-0005-parselmouth-feature-extraction.md  ADR-0006-shap-explainability.md  ADR-0007-postgres-alembic.md  ADR-0008-caddy-reverse-proxy.md  ADR-0009-distroless-runtime.md  ADR-0010-train-in-ci.md  ADR-0011-probability-calibration.md  ADR-0012-joblib-serialization.md  ADR-0013-llm-providers.md  ADR-0014-grounded-llm-architecture.md  ADR-0015-sse-streaming.md  _template.md
frontend/: .prettierignore  Dockerfile  eslint.config.js  index.html  nginx.conf  openapi.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.smoke.test.tsx  App.tsx  main.tsx  routes.tsx
frontend/src/api/: client.ts  queryKeys.ts
frontend/src/components/batch/: BatchProgress.tsx  BatchUploader.tsx
frontend/src/components/common/: RecentList.tsx  Skeleton.tsx
frontend/src/hooks/: useBatchJob.ts  useChatStream.ts  useHelpBot.ts  usePrediction.ts  useReportNarration.ts
frontend/src/lib/: audioUtils.ts  share.ts  sse.ts
frontend/src/pages/: AboutPage.tsx  AudioPage.tsx  BatchPage.tsx  DashboardPage.tsx  ExplorerPage.tsx  HomePage.tsx  NotFoundPage.tsx  PredictPage.tsx
frontend/src/stores/: recent.ts
frontend/src/styles/: globals.css
(+27 files in other folders)
