[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "parkinsons-voice-api"
version = "1.0.0"
description = "Parkinson's Voice Detection API — FastAPI backend"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kushagra Gupta" }]

dependencies = [
    # ── Web framework ──────────────────────────────────────────────────────────
    "fastapi~=0.115",
    "uvicorn[standard]~=0.30",
    "python-multipart~=0.0.12",

    # ── Validation / Settings ──────────────────────────────────────────────────
    "pydantic~=2.9",
    "pydantic-settings~=2.5",

    # ── Database ──────────────────────────────────────────────────────────────
    "sqlalchemy~=2.0",
    "alembic~=1.13",
    "asyncpg~=0.29",
    "aiosqlite~=0.20",

    # ── Auth ──────────────────────────────────────────────────────────────────
    "passlib[bcrypt]~=1.7",
    "PyJWT~=2.8",

    # ── Rate limiting ─────────────────────────────────────────────────────────
    "slowapi~=0.1.9",

    # ── Observability ─────────────────────────────────────────────────────────
    "structlog~=24.4",
    "prometheus-fastapi-instrumentator~=7.0",
    "sentry-sdk[fastapi]~=2.14",

    # ── ML ────────────────────────────────────────────────────────────────────
    "numpy~=2.0",
    "pandas~=2.2",
    "scikit-learn~=1.5",
    "lightgbm~=4.5",
    "xgboost~=2.1",
    "shap~=0.46",
    "joblib~=1.4",

    # ── Audio / Feature extraction ────────────────────────────────────────────
    "praat-parselmouth~=0.4.4",
    "librosa~=0.10",
    "soundfile~=0.12",

    # ── LLM ───────────────────────────────────────────────────────────────────
    "openai~=1.51",
    "sse-starlette>=2.1,<4.0",
    "tiktoken~=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.3",
    "pytest-asyncio~=0.24",
    "pytest-cov~=5.0",
    "httpx~=0.27",
    "fakeredis~=2.25",
    "respx~=0.21",
    "ruff~=0.6",
    "mypy~=1.11",
    "types-passlib",
    "types-PyJWT",
]

# ── Ruff (linting + formatting) ───────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ANN", # flake8-annotations
    "S",   # flake8-bandit (security)
    "RUF", # Ruff-specific
]
ignore = [
    "ANN101",  # Missing type annotation for `self`
    "ANN102",  # Missing type annotation for `cls`
    "S101",    # Use of `assert` (fine in tests)
    "S105",    # Hardcoded password (false positive in example configs)
    "B008",    # Do not perform function call in default argument (FastAPI Depends pattern)
]
per-file-ignores = { "tests/*" = ["ANN", "S"], "scripts/*" = ["ANN"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── mypy (strict) ─────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
exclude = ["alembic/", "scripts/"]

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "-v",
]
markers = [
    "integration: marks tests as integration tests (require DB/Redis)",
    "unit: marks tests as unit tests (no external services)",
    "golden: marks tests as golden-sample regression tests",
]

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/alembic/*", "*/scripts/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
